--- a/packages/backend/discovery/_templates/zklinknova/secondaryGateway/template.jsonc
+++ b/packages/backend/discovery/_templates/zklinknova/secondaryGateway/template.jsonc
@@ -1,5 +1,10 @@
 {
   "$schema": "../../../../../discovery/schemas/contract.v2.schema.json",
   "ignoreMethods": ["proxiableUUID"],
-  "ignoreRelatives": ["MESSAGE_SERVICE", "ARB_SYS", "getRemoteGateway"]
+  "ignoreRelatives": [
+    "MESSAGE_SERVICE",
+    "ARB_SYS",
+    "getRemoteGateway",
+    "ethToken"
+  ]
 }
