--- a/packages/discovery/package.json
+++ b/packages/discovery/package.json
@@ -24,6 +24,7 @@
     "@l2beat/shared": "*",
     "@l2beat/shared-pure": "*",
     "@mradomski/fast-solidity-parser": "0.1.1",
+    "bignumber.js": "^9.1.2",
     "chalk": "^4.1.2",
     "deep-diff": "^1.0.2",
     "dotenv": "^16.0.3",
