Add more OpStack templates, templatize Mode Network

--- a/packages/backend/discovery/_templates/opstack/SystemConfig/template.jsonc
+++ b/packages/backend/discovery/_templates/opstack/SystemConfig/template.jsonc
@@ -29,6 +29,11 @@
     "gasLimit": {
       "description": "Gas limit for blocks on L2.",
       "severity": "LOW"
+    },
+    "owner": {
+      "target": {
+        "permission": "owner"
+      }
     }
   },
   "ignoreInWatchMode": ["scalar", "overhead"]
