--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -56,6 +56,7 @@
   "fraxtal": true,
   "fuel": true,
   "fuelv1": true,
+  "galxegravity": true,
   "gluon": true,
   "gravity": true,
   "grvt": true,
@@ -166,7 +167,6 @@
   "termstructure": true,
   "teva": true,
   "tradable": true,
-  "transporter": true,
   "world": true,
   "wormholeV1": true,
   "xai": true,
