Transporter: ignore getCurrentBridgedAmount

--- a/packages/backend/discovery/_templates/transporter/TokenPool/template.jsonc
+++ b/packages/backend/discovery/_templates/transporter/TokenPool/template.jsonc
@@ -7,5 +7,5 @@
     "i_messageTransmitter",
     "i_tokenMessenger"
   ],
-  "ignoreInWatchMode": ["getOnRamps"]
+  "ignoreInWatchMode": ["getOnRamps", "getCurrentBridgedAmount"]
 }
