--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -2,6 +2,7 @@
   "=nil;": true,
   "across-v3": true,
   "aevo": true,
+  "alienx": true,
   "allbridge": false,
   "amarok": true,
   "ancient": true,
