update discovery, use opStack template

--- a/packages/backend/discovery/base/ethereum/config.jsonc
+++ b/packages/backend/discovery/base/ethereum/config.jsonc
@@ -3,9 +3,9 @@
   "chain": "ethereum",
   "name": "base",
   "initialAddresses": [
-    "0x608d94945A64503E642E6370Ec598e519a2C1E53",
-    "0x05cc379EBD9B30BbA19C6fA282AB29218EC61D84",
-    "0x9de443AdC5A411E83F1878Ef24C3F52C61571e72"
+    "0x608d94945A64503E642E6370Ec598e519a2C1E53", //L1ERC721Bridge
+    "0x9de443AdC5A411E83F1878Ef24C3F52C61571e72", //wstETHEscrow
+    "0x3154Cf16ccdb4C6d922629664174b904d80F2C35", //L1StandardBridge
   ],
   "names": {
     "0x3154Cf16ccdb4C6d922629664174b904d80F2C35": "L1StandardBridge",
@@ -22,99 +22,46 @@
     "0x7bB41C3008B3f03FE483B28b8DB90e19Cf07595c": "AdminMultisig",
     "0x9de443AdC5A411E83F1878Ef24C3F52C61571e72": "wstETHEscrow",
     "0x3e40D73EB977Dc6a537aF587D48316feE66E9C8c": "wstETHEscrowAdmin",
-    "0x73b047fe6337183A454c5217241D780a932777bD": "LidoEmergencyBrakeMultisig"
+    "0x73b047fe6337183A454c5217241D780a932777bD": "LidoEmergencyBrakeMultisig",
+    "0x0454092516c9A4d636d3CAfA1e82161376C8a748": "LivenessModule",
   },
   "overrides": {
-    "OptimismPortal": {
-      "ignoreMethods": ["isOutputFinalized"],
-      "ignoreInWatchMode": ["params"]
+    "LivenessModule": {
+      "ignoreMethods": ["getRequiredThreshold"],
     },
-    "L2OutputOracle": {
-      "ignoreMethods": [
-        "getL2OutputAfter",
-        "getL2OutputIndexAfter",
-        "getL2Output",
-        "computeL2Timestamp"
-      ],
-      "ignoreInWatchMode": [
-        "nextBlockNumber",
-        "nextOutputIndex",
-        "latestBlockNumber",
-        "latestOutputIndex"
-      ],
-      "fields": {
-        "deletedOutputs": {
-          "handler": {
-            "type": "stateFromEvent",
-            "event": "OutputsDeleted",
-            "returnParams": ["prevNextOutputIndex", "newNextOutputIndex"]
-          }
-        }
-      }
+    "L1StandardBridge": {
+      "extends": "opstack/L1StandardBridge",
     },
-    "AdminMultisig": {
-      "ignoreInWatchMode": ["nonce"]
-    },
-    "L1CrossDomainMessenger": {
-      "ignoreMethods": ["xDomainMessageSender"],
-      "ignoreInWatchMode": ["messageNonce"]
-    },
-    "SystemConfig": {
-      "fields": {
-        // this overrides the batcherHash method return type (bytes32 -> address) so our discovery detects it as an address
-        "batcherHash": {
-          "handler": {
-            "type": "call",
-            "method": "function batcherHash() view returns (address)",
-            "args": []
-          }
-        },
-        "opStackDA": {
-          "handler": {
-            "type": "opStackDA",
-            "sequencerAddress": "{{ batcherHash }}"
-          }
-        },
-        "sequencerInbox": {
-          "handler": {
-            "type": "opStackSequencerInbox",
-            "sequencerAddress": "{{ batcherHash }}"
-          }
-        },
-        "gasLimit": {
-          "description": "Gas limit for blocks on L2.",
-          "severity": "LOW"
-        }
-      },
-      "ignoreInWatchMode": ["scalar"]
-    },
-    "OptimismMultisig": {
-      "ignoreInWatchMode": ["nonce"]
-    },
-    "BaseMultisig": {
-      "ignoreInWatchMode": ["nonce"]
-    },
-    "GuardianMultisig": {
-      "ignoreInWatchMode": ["nonce"]
-    },
-    "GnosisSafe": {
-      "ignoreDiscovery": true
+    "L1ERC721Bridge": {
+      "extends": "opstack/L1ERC721Bridge",
     },
     "wstETHEscrow": {
       "ignoreRelatives": ["l2Token", "l1Token"],
       "fields": {
         "accessControl": {
           "handler": {
-            "type": "accessControl"
-          }
-        }
-      }
+            "type": "accessControl",
+          },
+        },
+      },
     },
     "wstETHEscrowAdmin": {
-      "ignoreDiscovery": true
+      "ignoreDiscovery": true,
     },
     "LidoEmergencyBrakeMultisig": {
-      "ignoreDiscovery": true
-    }
-  }
+      "ignoreDiscovery": true,
+    },
+    "OptimismMultisig": {
+      "ignoreInWatchMode": ["nonce"],
+    },
+    "BaseMultisig": {
+      "ignoreInWatchMode": ["nonce"],
+    },
+    "GuardianMultisig": {
+      "ignoreInWatchMode": ["nonce"],
+    },
+    "GnosisSafe": {
+      "ignoreDiscovery": true,
+    },
+  },
 }
