--- a/packages/backend/discovery/mode/ethereum/config.jsonc
+++ b/packages/backend/discovery/mode/ethereum/config.jsonc
@@ -3,8 +3,8 @@
   "chain": "ethereum",
   "name": "mode",
   "initialAddresses": [
-    "0x735aDBbE72226BD52e818E7181953f42E3b0FF21",
-    "0x2901dA832a4D0297FF0691100A8E496626cc626D"
+    "0x735aDBbE72226BD52e818E7181953f42E3b0FF21", //L1StandardBridge
+    "0x2901dA832a4D0297FF0691100A8E496626cc626D", //L1ERC721Bridge"
   ],
   "names": {
     "0x8B34b14c7c7123459Cf3076b8Cb929BE097d0C07": "OptimismPortal",
@@ -21,23 +21,23 @@
     "0x847B5c174615B1B7fDF770882256e2D3E95b9D92": "FoundationMultisig_1",
     "0x9BA6e03D8B90dE867373Db8cF1A58d2F7F006b3A": "FoundationMultisig_2",
     "0x09f7150D8c019BeF34450d6920f6B3608ceFdAf2": "GuardianMultisig",
-    "0x0454092516c9A4d636d3CAfA1e82161376C8a748": "LivenessModule"
+    "0x0454092516c9A4d636d3CAfA1e82161376C8a748": "LivenessModule",
   },
   "overrides": {
     "FoundationMultisig_1": {
-      "ignoreInWatchMode": ["nonce"]
+      "ignoreInWatchMode": ["nonce"],
     },
     "FoundationMultisig_2": {
-      "ignoreInWatchMode": ["nonce"]
+      "ignoreInWatchMode": ["nonce"],
     },
     "LivenessModule": {
-      "ignoreMethods": ["getRequiredThreshold"]
+      "ignoreMethods": ["getRequiredThreshold"],
     },
     "0x735aDBbE72226BD52e818E7181953f42E3b0FF21": {
-      "extends": "opstack/L1StandardBridge"
+      "extends": "opstack/L1StandardBridge",
     },
     "0x2901dA832a4D0297FF0691100A8E496626cc626D": {
-      "extends": "opstack/L1ERC721Bridge"
-    }
-  }
+      "extends": "opstack/L1ERC721Bridge",
+    },
+  },
 }
