--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -1292,6 +1292,13 @@
   ],
   "arbitrum": [
     {
+      "symbol": "WETH",
+      "address": "0x82aF49447D8a07e3bd95BD0d56f35241523fBab1",
+      "source": "canonical",
+      "supply": "zero",
+      "category": "ether"
+    },
+    {
       "symbol": "MOR",
       "address": "0x092bAaDB7DEf4C3981454dD9c0A0D7FF07bCFc86",
       "source": "native",
