--- a/packages/backend/discovery/base/ethereum/config.jsonc
+++ b/packages/backend/discovery/base/ethereum/config.jsonc
@@ -12,18 +12,21 @@
     "0x608d94945A64503E642E6370Ec598e519a2C1E53": "L1ERC721Bridge",
     "0x05cc379EBD9B30BbA19C6fA282AB29218EC61D84": "OptimismMintableERC20Factory",
     "0x9855054731540A48b28990B63DcF4f33d8AE46A1": "BaseMultisig",
-    "0x14536667Cd30e52C0b458BaACcB9faDA7046E056": "GuardianMultisig",
+    "0x14536667Cd30e52C0b458BaACcB9faDA7046E056": "BaseMultisig2",
     "0x49048044D57e1C92A77f79988d21Fa8fAF74E97e": "OptimismPortal",
     "0x56315b90c40730925ec5485cf004d835058518A0": "L2OutputOracle",
     "0x866E82a600A1414e583f7F13623F1aC5d58b0Afa": "L1CrossDomainMessenger",
     "0x73a79Fab69143498Ed3712e519A88a918e1f4072": "SystemConfig",
-    "0x9BA6e03D8B90dE867373Db8cF1A58d2F7F006b3A": "OptimismMultisig",
-    "0x42d27eEA1AD6e22Af6284F609847CB3Cd56B9c64": "GnosisSafe", // member of OptimismMultisig
     "0x7bB41C3008B3f03FE483B28b8DB90e19Cf07595c": "AdminMultisig",
     "0x9de443AdC5A411E83F1878Ef24C3F52C61571e72": "wstETHEscrow",
     "0x3e40D73EB977Dc6a537aF587D48316feE66E9C8c": "wstETHEscrowAdmin",
     "0x73b047fe6337183A454c5217241D780a932777bD": "LidoEmergencyBrakeMultisig",
-    "0x0454092516c9A4d636d3CAfA1e82161376C8a748": "LivenessModule"
+    "0x0454092516c9A4d636d3CAfA1e82161376C8a748": "LivenessModule",
+    "0xc2819DC788505Aac350142A7A707BF9D03E3Bd03": "SecurityCouncilMultisig",
+    "0x847B5c174615B1B7fDF770882256e2D3E95b9D92": "FoundationMultisig_1",
+    "0x9BA6e03D8B90dE867373Db8cF1A58d2F7F006b3A": "FoundationMultisig_2",
+    "0x09f7150D8c019BeF34450d6920f6B3608ceFdAf2": "SuperChainGuardianMultisig",
+    "0x5a0Aae59D09fccBdDb6C6CcEB07B7279367C3d2A": "SuperchainProxyAdminOwner"
   },
   "overrides": {
     "LivenessModule": {
@@ -51,7 +54,10 @@
     "LidoEmergencyBrakeMultisig": {
       "ignoreDiscovery": true
     },
-    "OptimismMultisig": {
+    "FoundationMultisig_1": {
+      "ignoreInWatchMode": ["nonce"]
+    },
+    "FoundationMultisig_2": {
       "ignoreInWatchMode": ["nonce"]
     },
     "BaseMultisig": {
@@ -59,9 +65,6 @@
     },
     "GuardianMultisig": {
       "ignoreInWatchMode": ["nonce"]
-    },
-    "GnosisSafe": {
-      "ignoreDiscovery": true
     }
   }
 }
