--- a/packages/backend/discovery/mode/ethereum/config.jsonc
+++ b/packages/backend/discovery/mode/ethereum/config.jsonc
@@ -3,8 +3,8 @@
   "chain": "ethereum",
   "name": "mode",
   "initialAddresses": [
-    "0x735aDBbE72226BD52e818E7181953f42E3b0FF21",
-    "0x2901dA832a4D0297FF0691100A8E496626cc626D"
+    "0x735aDBbE72226BD52e818E7181953f42E3b0FF21", //L1StandardBridge
+    "0x2901dA832a4D0297FF0691100A8E496626cc626D" //L1ERC721Bridge"
   ],
   "names": {
     "0x8B34b14c7c7123459Cf3076b8Cb929BE097d0C07": "OptimismPortal",
