--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -482,6 +482,11 @@
       "address": "0x21413c119b0C11C5d96aE1bD328917bC5C8ED67E"
     },
     {
+      "symbol": "GHO",
+      "address": "0x40D16FC0246aD3160Ccc09B8D0D3A2cD28aE6C2f",
+      "category": "stablecoin"
+    },
+    {
       "symbol": "GLM",
       "address": "0x7DD9c5Cba05E151C895FDe1CF355C9A1D5DA6429"
     },
@@ -1291,6 +1296,17 @@
     }
   ],
   "arbitrum": [
+    {
+      "symbol": "GHO",
+      "address": "0x7dfF72693f6A4149b17e7C6314655f6A9F7c8B33",
+      "category": "stablecoin",
+      "source": "external",
+      "supply": "totalSupply",
+      "coingeckoId": "gho",
+      "bridgedUsing": {
+        "bridge": "Chainlinl CCIP"
+      }
+    },
     {
       "symbol": "WETH",
       "address": "0x82aF49447D8a07e3bd95BD0d56f35241523fBab1",
