Enhance OP Templates

--- a/packages/backend/discovery/_templates/opstack/L1CrossDomainMessenger/template.jsonc
+++ b/packages/backend/discovery/_templates/opstack/L1CrossDomainMessenger/template.jsonc
@@ -9,6 +9,11 @@
       "target": {
         "template": "opstack/OptimismPortal"
       }
+    },
+    "PORTAL": {
+      "target": {
+        "template": "opstack/OptimismPortal"
+      }
     }
   }
 }
