--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -3196,5 +3196,14 @@
         "slug": "omnichain"
       }
     }
+  ],
+  "sanko": [
+    {
+      "symbol": "SMOKE",
+      "address": "0xe78a3857593083dd6e1f7859e1b711401fc6f2cc",
+      "source": "native",
+      "supply": "circulatingSupply",
+      "coingeckoId": "smoke-the-ticker"
+    }
   ]
 }
