Termstructure: Ignore getTokenNum in watch mode

--- a/packages/backend/discovery/termstructure/ethereum/config.jsonc
+++ b/packages/backend/discovery/termstructure/ethereum/config.jsonc
@@ -24,7 +24,8 @@
         "getBlockNum",
         "getBorrowFeeRate",
         "getFundWeight",
-        "getL1RequestNum"
+        "getL1RequestNum",
+        "getTokenNum"
       ],
       "ignoreRelatives": ["getAaveV3Pool", "getWETH"],
       "fields": {
