--- a/packages/config/src/verification/ethereum/manuallyVerified.jsonc
+++ b/packages/config/src/verification/ethereum/manuallyVerified.jsonc
@@ -11,5 +11,6 @@
   "0x6880f6Fd960D1581C2730a451A22EED1081cfD72": "https://github.com/FuelLabs/fuel-v1-contracts/blob/master/src/Fuel.yulp", // FuelV1 contract written in Yul+
   "0xFd234971881a7c72965175fA8E438c97B2Dcd273": "https://github.com/iden3/circomlibjs/blob/main/src/poseidon_gencontract.js", // Kroma's Poseidon2 contract, deployed using Circomlibjs,
   "0x4B8Aa8A96078689384DAb49691E9bA51F9d2F9E1": "https://circuit-release.s3.us-west-2.amazonaws.com/release-v0.9.5/evm_verifier.yul", // Scroll's PlonkVerifierV0 (calldata) written in Yul+
-  "0x2293cd12e8564e8219d314b075867c2f66ac6941": "https://circuit-release.s3.us-west-2.amazonaws.com/release-v0.10.3/evm_verifier.yul" // Scroll's PlonkVerifierV1 (blobs) written in Yul+
+  "0x2293cd12e8564e8219d314b075867c2f66ac6941": "https://circuit-release.s3.us-west-2.amazonaws.com/release-v0.10.3/evm_verifier.yul", // Scroll's PlonkVerifierV1 (blobs) written in Yul+
+  "0x03a72B00D036C479105fF98A1953b15d9c510110": "https://circuit-release.s3.us-west-2.amazonaws.com/release-v0.11.4/evm_verifier.yul" // Scroll's PlonkVerifierV2 (blobs, Curie upgrade) written in Yul+
 }
