--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -3,15 +3,20 @@
   "across-v3": true,
   "aevo": true,
   "alienx": true,
+  "align": true,
   "allbridge": false,
   "amarok": true,
   "ancient": true,
   "ankr": true,
+  "anomaly": true,
+  "apechain": true,
   "apex": true,
   "aptos": false,
   "arbitrum": true,
+  "arcology": true,
   "astarzkevm": true,
   "avalanche": true,
+  "aviveworld": true,
   "axonum": true,
   "aztec": true,
   "aztec-v2": true,
@@ -64,6 +69,7 @@
   "harmony": true,
   "hermez": true,
   "honeypot": true,
+  "hook": true,
   "hop": true,
   "hychain": true,
   "hyphen": true,
@@ -168,6 +174,7 @@
   "termstructure": true,
   "teva": true,
   "tradable": true,
+  "treasure": true,
   "world": true,
   "wormholeV1": true,
   "xai": true,
