More added tokens (#4361)
Co-authored-by: sekuba <29250140+sekuba@users.noreply.github.com>
Co-authored-by: Luca Donno <30298476+lucadonnoh@users.noreply.github.com>

--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -482,6 +482,11 @@
       "address": "0x21413c119b0C11C5d96aE1bD328917bC5C8ED67E"
     },
     {
+      "symbol": "GHO",
+      "address": "0x40D16FC0246aD3160Ccc09B8D0D3A2cD28aE6C2f",
+      "category": "stablecoin"
+    },
+    {
       "symbol": "GLM",
       "address": "0x7DD9c5Cba05E151C895FDe1CF355C9A1D5DA6429"
     },
@@ -1291,6 +1296,17 @@
     }
   ],
   "arbitrum": [
+    {
+      "symbol": "GHO",
+      "address": "0x7dfF72693f6A4149b17e7C6314655f6A9F7c8B33",
+      "category": "stablecoin",
+      "source": "external",
+      "supply": "totalSupply",
+      "coingeckoId": "gho",
+      "bridgedUsing": {
+        "bridge": "Chainlink CCIP"
+      }
+    },
     {
       "symbol": "WETH",
       "address": "0x82aF49447D8a07e3bd95BD0d56f35241523fBab1",
@@ -2450,6 +2466,30 @@
     }
   ],
   "kinto": [
+    {
+      "symbol": "USDe",
+      "category": "stablecoin",
+      "address": "0x05dE0003C333A503bea5224fCc64f0D4b5446C38",
+      "source": "external",
+      "supply": "totalSupply",
+      "bridgedUsing": {
+        "bridge": "Socket",
+        "slug": "socket"
+      },
+      "coingeckoId": "ethena-usde"
+    },
+    {
+      "symbol": "WETH",
+      "category": "ether",
+      "address": "0x0E7000967bcB5fC76A5A89082db04ed0Bf9548d8",
+      "source": "external",
+      "supply": "totalSupply",
+      "bridgedUsing": {
+        "bridge": "Socket",
+        "slug": "socket"
+      },
+      "coingeckoId": "weth"
+    },
     {
       "symbol": "USD+",
       "address": "0x6F086dB0f6A621a915bC90295175065c9e5d9b8c",
