--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -1332,7 +1332,7 @@
       "source": "native"
     },
     {
-      "symbol": "solvBTC",
+      "symbol": "SolvBTC",
       "address": "0x3647c54c4c2C65bC7a2D63c0Da2809B399DBBDC0",
       "supply": "totalSupply",
       "coingeckoId": "solv-btc",
