--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -53,9 +53,11 @@
   "dydx": true,
   "eclipse": true,
   "edgeless": true,
+  "educhain": true,
   "ethernity": true,
   "everclear": true,
   "fhenix": true,
+  "fiefdom": true,
   "form": true,
   "frame": true,
   "fraxferry": true,
@@ -161,6 +163,7 @@
   "stargatev2": false,
   "starknet": true,
   "stealthchain": true,
+  "superposition": true,
   "superseed": true,
   "swell": true,
   "sxt": true,
@@ -168,6 +171,7 @@
   "symbiosis": true,
   "synapse": true,
   "syndicateframe": true,
+  "syndr": true,
   "taiko": true,
   "telos": true,
   "ten": true,
