--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -15,10 +15,11 @@
   },
   "dependencies": {
     "@l2beat/backend": "*",
-    "@l2beat/discovery": "*",
     "@l2beat/config": "*",
     "@l2beat/database": "*",
+    "@l2beat/discovery": "*",
     "@l2beat/shared-pure": "*",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-radio-group": "^1.2.0",
