add registered operators list

--- a/packages/backend/discovery/eigenda/ethereum/config.jsonc
+++ b/packages/backend/discovery/eigenda/ethereum/config.jsonc
@@ -71,6 +71,16 @@
           "description": "if quorum count changes, makes sure the new quorum parameters are tracked in the config",
           "severity": "HIGH",
           "type": "RISK_PARAMETER"
+        },
+        "registeredOperators":{
+          "description": "List of all registered operators ids",
+          "handler":{
+            "type": "arrayFromTwoEvents",
+            "addEvent": "event OperatorRegistered(address indexed operator, bytes32 indexed operatorId)",
+            "addKey": "operatorId",
+            "removeEvent": "event OperatorDeregistered(address indexed operator, bytes32 indexed operatorId)",
+            "removeKey": "operatorId"
+          }
         }
       }
     },
