--- a/packages/backend/discovery/eigenda/ethereum/config.jsonc
+++ b/packages/backend/discovery/eigenda/ethereum/config.jsonc
@@ -49,6 +49,7 @@
       "ignoreMethods": ["timestampToBlockRoot"]
     },
     "RegistryCoordinator": {
+      "ignoreInWatchMode": ["registeredOperators"],
       "description": "Operators register here with an AVS: The coordinator has three registries: 1) a `StakeRegistry` that keeps track of operators' stakes, 2) a `BLSApkRegistry` that keeps track of operators' BLS public keys and aggregate BLS public keys for each quorum, 3) an `IndexRegistry` that keeps track of an ordered list of operators for each quorum",
       "fields": {
         "operatorSetParamsQuorum1": {
