--- a/packages/backend/discovery/lzomnichain/arbitrum/config.jsonc
+++ b/packages/backend/discovery/lzomnichain/arbitrum/config.jsonc
@@ -8,9 +8,13 @@
     "0x3c2269811836af69497E5F486A85D7316753cf62": "Endpoint",
     "0xFE22f5D2755b06b9149656C5793Cb15A08d09847": "LayerZero Multisig",
     "0x352d8275AAE3e0c2404d9f68f6cEE084B5bEB3DD": "Stargate Bridge",
-    "0x6694340fc020c5E6B96567843da2df01b2CE1eb6": "Stargate Token"
+    "0x6694340fc020c5E6B96567843da2df01b2CE1eb6": "Stargate Token",
+    "0x9c8D8A224545c15024cB50C7c02cf3EA9AA1bF36": "PriceFeed"
   },
   "overrides": {
+    "PriceFeed": {
+      "ignoreDiscovery": true
+    },
     "Stargate Bridge": {
       "ignoreDiscovery": true
     },
