--- a/packages/backend/discovery/lzomnichain/base/config.jsonc
+++ b/packages/backend/discovery/lzomnichain/base/config.jsonc
@@ -6,9 +6,13 @@
   "names": {
     "0xb6319cC6c8c27A8F5dAF0dD3DF91EA35C4720dd7": "Endpoint",
     "0x38dE71124f7a447a01D67945a51eDcE9FF491251": "UltraLightNodeV2",
-    "0x28937ca4873f7289Ebea0708c4E42b24835eCfF0": "LayerZero Multisig"
+    "0x28937ca4873f7289Ebea0708c4E42b24835eCfF0": "LayerZero Multisig",
+    "0x3c2269811836af69497E5F486A85D7316753cf62": "PriceFeed"
   },
   "overrides": {
+    "PriceFeed": {
+      "ignoreDiscovery": true
+    },
     "Endpoint": {
       "ignoreInWatchMode": ["isReceivingPayload", "isSendingPayload"],
       "fields": {
