--- a/packages/backend/discovery/lzomnichain/ethereum/config.jsonc
+++ b/packages/backend/discovery/lzomnichain/ethereum/config.jsonc
@@ -13,9 +13,13 @@
     "0x5a54fe5234E811466D5366846283323c954310B2": "TSS Oracle",
     "0xCDa8e3ADD00c95E5035617F970096118Ca2F4C92": "LayerZero Multisig",
     "0x296F55F8Fb28E498B858d0BcDA06D955B2Cb3f97": "Stargate Bridge",
-    "0xAf5191B0De278C7286d6C7CC6ab6BB8A73bA2Cd6": "Stargate Token"
+    "0xAf5191B0De278C7286d6C7CC6ab6BB8A73bA2Cd6": "Stargate Token",
+    "0xC03f31fD86a9077785b7bCf6598Ce3598Fa91113": "PriceFeed"
   },
   "overrides": {
+    "PriceFeed": {
+      "ignoreDiscovery": true
+    },
     "Stargate Bridge": {
       "ignoreDiscovery": true
     },
