--- a/packages/backend/discovery/lzomnichain/optimism/config.jsonc
+++ b/packages/backend/discovery/lzomnichain/optimism/config.jsonc
@@ -8,9 +8,13 @@
     "0x3c2269811836af69497E5F486A85D7316753cf62": "Endpoint",
     "0x2458BAAbfb21aE1da11D9dD6AD4E48aB2fBF9959": "LayerZero Multisig",
     "0x701a95707A0290AC8B90b3719e8EE5b210360883": "Stargate Bridge",
-    "0x296F55F8Fb28E498B858d0BcDA06D955B2Cb3f97": "Stargate Token"
+    "0x296F55F8Fb28E498B858d0BcDA06D955B2Cb3f97": "Stargate Token",
+    "0x6d65a44Bd6Cfe1a8b2E816c918Dd83a6b04c8DEe": "PriceFeed"
   },
   "overrides": {
+    "PriceFeed": {
+      "ignoreDiscovery": true
+    },
     "Stargate Bridge": {
       "ignoreDiscovery": true
     },
