--- a/packages/backend/discovery/lzomnichain/polygonpos/config.jsonc
+++ b/packages/backend/discovery/lzomnichain/polygonpos/config.jsonc
@@ -8,9 +8,13 @@
     "0x3c2269811836af69497E5F486A85D7316753cf62": "Endpoint",
     "0xF1a5F92F5F89e8b539136276f827BF1648375312": "LayerZero Multisig",
     "0x9d1B1669c73b033DFe47ae5a0164Ab96df25B944": "Stargate Bridge",
-    "0x2F6F07CDcf3588944Bf4C42aC74ff24bF56e7590": "Stargate Token"
+    "0x2F6F07CDcf3588944Bf4C42aC74ff24bF56e7590": "Stargate Token",
+    "0x119C04C4E60158fa69eCf4cdDF629D09719a7572": "PriceFeed"
   },
   "overrides": {
+    "PriceFeed": {
+      "ignoreDiscovery": true
+    },
     "Stargate Bridge": {
       "ignoreDiscovery": true
     },
