--- a/packages/backend/discovery/stargate/ethereum/config.jsonc
+++ b/packages/backend/discovery/stargate/ethereum/config.jsonc
@@ -25,9 +25,13 @@
     "0xd8772edBF88bBa2667ed011542343b0eDDaCDa47": "METIS Pool",
     "0x430Ebff5E3E80A6C58E7e6ADA1d90F5c28AA116d": "USDT Pool2",
     "0x1CE66c52C36757Daf6551eDc04800A0Ec9983A09": "WOO Pool",
-    "0xA572d137666DCbAdFA47C3fC41F15e90134C618c": "mETH Pool"
+    "0xA572d137666DCbAdFA47C3fC41F15e90134C618c": "mETH Pool",
+    "0xC03f31fD86a9077785b7bCf6598Ce3598Fa91113": "PriceFeed"
   },
   "overrides": {
+    "PriceFeed": {
+      "ignoreDiscovery": true
+    },
     "Factory": {
       "ignoreMethods": ["getPool"],
       "fields": {
