Add EIP2535 facets decoding handler

--- a/packages/backend/discovery/zksync2/ethereum/config.jsonc
+++ b/packages/backend/discovery/zksync2/ethereum/config.jsonc
@@ -108,6 +108,11 @@
         "getVerifierParams": {
           "description": "Verifier parameters used for proving batches",
           "severity": "LOW"
+        },
+        "facets": {
+          "handler": {
+            "type": "eip2535Facets"
+          }
         }
       }
     },
