--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -24,8 +24,7 @@
     "test": "mocha --timeout 10000",
     "typecheck": "tsc --noEmit",
     "find-common-contracts": "ts-node --transpile-only scripts/findCommonContracts.ts",
-    "update-diff-history": "ts-node --transpile-only scripts/updateDiffHistory.ts",
-    "powerdiff": "ts-node --transpile-only scripts/powerdiff.ts"
+    "update-diff-history": "ts-node --transpile-only scripts/updateDiffHistory.ts"
   },
   "dependencies": {
     "@bugsnag/js": "^7.22.3",
