--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -24,11 +24,7 @@
     "test": "mocha --timeout 10000",
     "typecheck": "tsc --noEmit",
     "find-common-contracts": "ts-node --transpile-only scripts/findCommonContracts.ts",
-    "update-diff-history": "ts-node --transpile-only scripts/updateDiffHistory.ts",
-    "powerdiff": "ts-node --transpile-only scripts/powerdiff.ts",
-    "compare-orbit-chains": "ts-node --transpile-only scripts/compareOrbitChains.ts",
-    "compare-opstack-chains": "ts-node --transpile-only scripts/compareOpStackChains.ts",
-    "compare-flat-sources": "ts-node --transpile-only scripts/compare-flat/index.ts"
+    "update-diff-history": "ts-node --transpile-only scripts/updateDiffHistory.ts"
   },
   "dependencies": {
     "@bugsnag/js": "^7.22.3",
